--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.2",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "expo": "~52.0.39",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -31,16 +35,25 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jwt-decode": "^4.0.0",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-modals": "^0.22.3",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
